<resources>
    <string name="app_name">XJTU Payment</string>
    <string name="title_activity_login">统一认证平台登录</string>
    <string name="prompt_email">职工号/学号/NetID/手机号/身份证号</string>
    <string name="prompt_password">请输入密码</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_in_short">登录</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">用户名不能为空！</string>
    <string name="invalid_password">密码长度不低于6位!</string>
    <string name="login_failed">"登陆失败"</string>
    <string name="login_with_password">统一身份认证登录</string>
    <string name="org_secret_key">18a9d512c03745a791d92630bc0888f6</string>
</resources>